--- a/spring_cloud_config/src/main/resources/application.yml
+++ b/spring_cloud_config/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
       server:
         git: #配置git仓库地址
           uri: https://github.com/lushengman/springCloudcConfigTest.git
-          username:
-          password:
+          username: lushengman
+          password: LSM24682281lsm
 #  rabbitmq: #RabbitMQ相关的配置
 #    host: 127.0.0.1
 #    port: 5672
